--- a/src/components/event.css
+++ b/src/components/event.css
@@ -9,6 +9,7 @@
     min-width: 400px; 
     height: 400px;
     border-radius: 20px;
+    filter: drop-shadow(0px 10px 4px gray);
 }
 
 .media-list {
@@ -19,3 +20,52 @@
     color: red;
     font-size: 40px;
 }
+
+#joined {
+    width: 1000px;
+}
+
+.button {
+    display: inline-block;
+    font-size: 18px;
+    color: #2f70e1;
+    padding: 10px 30px; 
+    margin-right: 10px;
+    box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, .3);
+    cursor: pointer;
+    border-radius: 20px;
+    float: right;
+
+
+}
+
+.button-small {
+    padding: 5px 10px;  
+    font-size: 12px;
+}
+
+.toggled {
+    background-color: #40d859;
+    color: #fff;
+}
+
+button {
+    margin-top: 80px;
+}
+
+.tags {
+    margin-top: 20px;
+
+}
+
+
+.tags li {
+    list-style-type: none;
+    float: left;
+    padding: 5px 10px;
+    margin-right: 20px;
+    background-color: rgb(209, 209, 209);
+    border-radius: 20px;
+}
+
+
