--- a/src/components/index.css
+++ b/src/components/index.css
@@ -35,7 +35,8 @@ body {
     /*background: rgb(71,122,237);
     background: linear-gradient(90deg, rgba(71,122,237,1) 0%, rgba(67,238,190,1) 51%, rgba(0,255,255,1) 100%);
     */
-    background: rgb(71, 184, 237);
+    background: rgb(0,126,247);
+background: linear-gradient(90deg, rgba(0,126,247,1) 0%, rgba(71,184,237,1) 44%, rgba(0,212,255,1) 100%);
 }
 
 .landing-block {
